[package]
name = "linetest"
version = "0.2.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winping = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pinger = "0.3.1"
anyhow = "1.0.41"
log = "0.4.14"
env_logger = "0.9.0"
ureq = "2.1.1"
rayon = "1.5.1"
chrono = "0.4.19"
dirs = "3.0.2"
