[package]
name = "linetest-gui"
version = "0.1.0"
edition = "2018"
description = "Graphical network connection measurement"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.13.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
linetest = { path = "../"}
anyhow = "1.0.42"
env_logger = "0.9.0"
log = "0.4.14"

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown


[package.metadata.bundle]
name = "linetest"
identifier = "com.github.woelper.linetest"
icon = ["icon.png"]
copyright = "Johann Woelper"
category = "Developer Tool"
short_description = "Check your internet connection"
long_description = """
Get insight about your internet connection
"""

[profile.release]
incremental = true
lto = true
codegen-units = 1